--- a/cpu/CMakeLists.txt
+++ b/cpu/CMakeLists.txt
@@ -1,5 +1,17 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-set(CPU_SRC CpuModule_Disassembler.c)
+set(CPU_SRC 
+	CpuModule.c 
+	CpuModule_Disassembler.c 
+	CpuModule_EffectiveAddress.c 
+	CpuModule_Exceptions.c 
+	CpuModule_Flags.c
+	CpuModule_Instructions.c
+	CpuModule_Interrupts.c
+	CpuModule_StackFrameGen.c
+)
+
+#FILE(GLOB CPU_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
+
 
 add_library(CPU_LIB ${CPU_SRC})
