--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ cmake_minimum_required(VERSION 2.6)
 add_subdirectory(bin)
 add_subdirectory(cpu)
 add_subdirectory(toolbox)
+add_subdirectory(mplite)
