mm init, newptr

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -9,3 +9,4 @@ add_definitions(-I ${CMAKE_SOURCE_DIR}/)
 add_executable(mpw loader.cpp)
 target_link_libraries(mpw CPU_LIB)
 target_link_libraries(mpw TOOLBOX_LIB)
+target_link_libraries(mpw MPLITE_LIB)
