--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -6,12 +6,14 @@ SET(CMAKE_EXE_LINKER_FLAGS "-framework Carbon")
 add_definitions(-I ${CMAKE_SOURCE_DIR}/)
 
 
-add_executable(mpw loader.cpp)
+add_executable(mpw loader.cpp debugger.cpp)
 target_link_libraries(mpw CPU_LIB)
+target_link_libraries(mpw DEBUGGER_LIB)
 target_link_libraries(mpw TOOLBOX_LIB)
 target_link_libraries(mpw MPW_LIB)
 target_link_libraries(mpw MPLITE_LIB)
 target_link_libraries(mpw MACOS_LIB)
+set_target_properties(mpw PROPERTIES LINK_FLAGS "-ledit")
 
 
 add_executable(disasm disasm.cpp)
