AddressMap / ToolMap class

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -6,7 +6,7 @@ SET(CMAKE_EXE_LINKER_FLAGS "-framework Carbon")
 add_definitions(-I ${CMAKE_SOURCE_DIR}/)
 
 
-add_executable(mpw loader.cpp debugger.cpp)
+add_executable(mpw loader.cpp debugger.cpp address_map.cpp)
 target_link_libraries(mpw CPU_LIB)
 target_link_libraries(mpw DEBUGGER_LIB)
 target_link_libraries(mpw TOOLBOX_LIB)
