--- a/debugger/CMakeLists.txt
+++ b/debugger/CMakeLists.txt
@@ -1,7 +1,8 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
+add_definitions(-I ${CMAKE_SOURCE_DIR}/)
 
 
-set(DEBUGGER_SRC lexer.cpp parser.c)
+set(DEBUGGER_SRC lexer.cpp parser.cpp)
 
 add_custom_command(
 	OUTPUT lexer.cpp
@@ -11,11 +12,12 @@ add_custom_command(
 )
 
 add_custom_command(
-	OUTPUT parser.c parser.h
+	OUTPUT parser.cpp parser.h
 	COMMAND cp -f "${CMAKE_CURRENT_SOURCE_DIR}/parser.lemon" "parser.lemon"
 	COMMAND lemon parser.lemon
 	COMMAND cp -f parser.h "${CMAKE_CURRENT_SOURCE_DIR}/"
 	COMMAND cp -f parser.out "${CMAKE_CURRENT_SOURCE_DIR}/"
+	COMMAND mv -f parser.c parser.cpp
 	MAIN_DEPENDENCY parser.lemon
 	DEPENDS commands.h
 )
