ragel environment parser.

--- a/mpw/CMakeLists.txt
+++ b/mpw/CMakeLists.txt
@@ -6,6 +6,11 @@ add_definitions(-I ${CMAKE_SOURCE_DIR}/)
 
 set(MPW_SRC mpw.cpp mpw_io.cpp mpw_close.cpp mpw_access.cpp mpw_ioctl.cpp environ.cpp)
 
+add_custom_command(
+	OUTPUT environ.cpp
+	COMMAND ragel -p -G2 -o environ.cpp "${CMAKE_CURRENT_SOURCE_DIR}/environ.rl"
+	MAIN_DEPENDENCY environ.rl 
+)
 
 
 add_library(MPW_LIB ${MPW_SRC})
