--- a/Tools/makefile
+++ b/Tools/makefile
@@ -3,7 +3,9 @@
 Libraries=~/mpw/Libraries/Libraries
 CLibraries=~/mpw/Libraries/CLibraries
 
-LIBS = 	$(Libraries)/Stubs.o \
+# MPW 3.2
+LIBS = \
+	$(Libraries)/Stubs.o \
 	$(CLibraries)/StdCLib.o \
 	$(Libraries)/Interface.o \
 	$(Libraries)/Runtime.o \
@@ -12,7 +14,23 @@ LIBS = 	$(Libraries)/Stubs.o \
 LDFLAGS = -w -c 'MPS ' -t MPST \
 	-sn STDIO=Main -sn INTENV=Main -sn %A5Init=Main
 
+# MPW 3.5
+
+# LIBS = \
+# 	$(CLibraries)/StdCLib.o \
+# 	$(Libraries)/Stubs.o \
+# 	$(Libraries)/IntEnv.o \
+# 	$(Libraries)/MacRuntime.o \
+# 	$(Libraries)/Interface.o \
+# 	$(Libraries)/ToolLibs.o
+
+# LDFLAGS = -d -c 'MPS ' -t MPST
+
 all: Help GetEnv Duplicate SetFile
+
+clean:
+	rm -f *.c.o
+	rm -f Help GetEnv Duplicate SetFile
 
 GetEnv: GetEnv.c.o
 	mpw Link $(LDFLAGS) -o $@ $^ $(LIBS) 
