new mac path expansion

--- a/mpw/CMakeLists.txt
+++ b/mpw/CMakeLists.txt
@@ -4,7 +4,8 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++ -Wall -g")
 
 add_definitions(-I ${CMAKE_SOURCE_DIR}/)
 
-set(MPW_SRC mpw.cpp mpw_io.cpp mpw_close.cpp mpw_access.cpp mpw_ioctl.cpp environ.cpp)
+set(MPW_SRC mpw.cpp mpw_io.cpp mpw_close.cpp mpw_access.cpp mpw_ioctl.cpp
+	environ.cpp epv.cpp ep.cpp)
 
 add_custom_command(
 	OUTPUT environ.cpp
@@ -12,8 +13,25 @@ add_custom_command(
 	MAIN_DEPENDENCY environ.rl 
 )
 
+
+add_custom_command(
+	OUTPUT epv.cpp
+	COMMAND ragel -p -G2 -o epv.cpp "${CMAKE_CURRENT_SOURCE_DIR}/epv.rl"
+	MAIN_DEPENDENCY epv.rl 
+)
+
+
+add_custom_command(
+	OUTPUT ep.cpp
+	COMMAND ragel -p -G2 -o ep.cpp "${CMAKE_CURRENT_SOURCE_DIR}/ep.rl"
+	MAIN_DEPENDENCY ep.rl 
+)
+
+
+
+
 set_source_files_properties(
-	environ.cpp 
+	environ.cpp ep.cpp epv.cpp
 	PROPERTIES
 	COMPILE_FLAGS 
 	"${CMAKE_CXX_FLAGS} -Wno-unused-variable"
