--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 os: osx
 language: cpp
 compiler: clang
-before_script: mkdir build
-script: cmake --build build --target mpw
+before_script: 
+  - mkdir build
+  - cd build
+  - cmake ..
+script: make mpw
 before_install:
   - brew update
   - brew install lemon
