remove mpw-make. it's deprecated and replaced with mpw-shell in a separate repository.

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -60,13 +60,6 @@ add_custom_command(
 	DEPENDS debugger.h template_parser.h
 )
 
-add_custom_command(
-	OUTPUT mpw-make-parse.cpp
-	COMMAND ragel -p -G2 -o mpw-make-parse.cpp "${CMAKE_CURRENT_SOURCE_DIR}/mpw-make-parse.rl"
-	MAIN_DEPENDENCY mpw-make-parse.rl 
-	DEPENDS debugger.h
-)
-
 
 
 set_source_files_properties(
@@ -94,6 +87,8 @@ add_executable(disasm disasm.cpp)
 target_link_libraries(disasm CPU_LIB)
 target_link_libraries(disasm MACOS_LIB)
 
-
-add_executable(mpw-make mpw-make-parse.cpp mpw-make.cpp)
-
+install(
+  PROGRAMS
+    ${CMAKE_CURRENT_BINARY_DIR}/mpw
+  DESTINATION bin
+)
