--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,15 +3,21 @@ project(mpw)
 set (PROJECT_TYPE "CXX")
 set (PROJECT_NAME "mpw")
 
+# these are only effective as of CMake 3.1, apparently.
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_EXTENSIONS FALSE)
+
+set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_STANDARD_REQUIRED TRUE)
+set(CMAKE_C_EXTENSIONS FALSE)
+
 
 if (APPLE)
 	set(CMAKE_C_COMPILER "clang")
 	set(CMAKE_CXX_COMPILER "clang++")
 	set(CMAKE_CXX_FLAGS "-stdlib=libc++ -Wall -g")
-	set(CMAKE_C_FLAGS " -Wall  -g")
+	set(CMAKE_C_FLAGS "-Wall  -g")
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "SunOS")
 	set(CMAKE_C_COMPILER "gcc")
 	set(CMAKE_CXX_COMPILER "g++")
@@ -25,11 +31,6 @@ elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Windows")
 
 endif()
-
-
-#set_property (TARGET mpw PROPERTY CXX_STANDARD 14)
-#set_property (TARGET mpw PROPERTY CXX_STANDARD_REQUIRED TRUE)
-#set_property (TARGET mpw PROPERTY CXX_EXTENSIONS FALSE)
 
 
 add_subdirectory(bin)
