--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,13 +21,13 @@ if (APPLE)
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "SunOS")
 	set(CMAKE_C_COMPILER "gcc")
 	set(CMAKE_CXX_COMPILER "g++")
-	set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -g")
-	set(CMAKE_C_FLAGS "-std=c99 -Wall  -g")
+	set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -g -Wno-unknown-pragmas")
+	set(CMAKE_C_FLAGS "-std=c99 -Wall -g")
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
 	set(CMAKE_C_COMPILER "gcc")
 	set(CMAKE_CXX_COMPILER "g++")
-	set(CMAKE_CXX_FLAGS "-std=c++14 -Wall  -g")
-	set(CMAKE_C_FLAGS "-std=c99 -Wall  -g")
+	set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -g -Wno-unknown-pragmas")
+	set(CMAKE_C_FLAGS "-std=c99 -Wall -g")
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Windows")
 
 endif()
