--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.1)
 project(mpw)
 set (PROJECT_TYPE "CXX")
 set (PROJECT_NAME "mpw")
@@ -12,7 +12,6 @@ set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED TRUE)
 set(CMAKE_C_EXTENSIONS FALSE)
 
-
 if (APPLE)
 	set(CMAKE_C_COMPILER "clang")
 	set(CMAKE_CXX_COMPILER "clang++")
@@ -21,13 +20,13 @@ if (APPLE)
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "SunOS")
 	set(CMAKE_C_COMPILER "gcc")
 	set(CMAKE_CXX_COMPILER "g++")
-	set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -g -Wno-unknown-pragmas")
+	set(CMAKE_CXX_FLAGS "-Wall -g -Wno-unknown-pragmas")
 	set(CMAKE_C_FLAGS "-std=c99 -Wall -g")
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
 	set(CMAKE_C_COMPILER "gcc")
 	set(CMAKE_CXX_COMPILER "g++")
-	set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -g -Wno-unknown-pragmas")
-	set(CMAKE_C_FLAGS "-std=c99 -Wall -g")
+	set(CMAKE_CXX_FLAGS "-Wall -g -Wno-unknown-pragmas")
+	set(CMAKE_C_FLAGS "-Wall -g")
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Windows")
 
 endif()
@@ -39,4 +38,5 @@ add_subdirectory(toolbox)
 add_subdirectory(mplite)
 add_subdirectory(mpw)
 add_subdirectory(macos)
+add_subdirectory(cxx)
 add_subdirectory(native)
