--- a/toolbox/CMakeLists.txt
+++ b/toolbox/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 add_definitions(-I ${CMAKE_SOURCE_DIR}/)
+add_definitions(-I ${CMAKE_BINARY_DIR}/)
 
 set(TOOLBOX_SRC 
 	toolbox.cpp
