--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 add_definitions(-I ${CMAKE_SOURCE_DIR}/)
+add_definitions(-I ${CMAKE_BINARY_DIR}/)
 
 set(NATIVE_SRC native.cpp ${CMAKE_SYSTEM_NAME}.cpp)
 
