--- a/cpu/CMakeLists.txt
+++ b/cpu/CMakeLists.txt
@@ -1,6 +1,4 @@
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-set(CMAKE_C_FLAGS "-std=c99 -Wall -Wno-unused-function -g")
+add_compile_options(-g -Wall -Wno-unused-function)
 
 set(CPU_SRC 
 	CpuModule.c 
