--- a/toolbox/CMakeLists.txt
+++ b/toolbox/CMakeLists.txt
@@ -22,7 +22,6 @@ set(TOOLBOX_SRC
 	os_volume.cpp
 	qd.cpp
 	sane.cpp
-	saneparser.cpp
 	packages.cpp
 	pathnames.cpp
 	process.cpp
@@ -32,13 +31,7 @@ set(TOOLBOX_SRC
 	dispatch.cpp
 	fpinfo.cpp
 	debug.cpp
-)
 
-
-add_custom_command(
-	OUTPUT saneparser.cpp
-	COMMAND ragel -p -G2 -o saneparser.cpp "${CMAKE_CURRENT_SOURCE_DIR}/saneparser.rl"
-	MAIN_DEPENDENCY saneparser.rl 
 )
 
 add_custom_command(
@@ -48,10 +41,12 @@ add_custom_command(
 )
 
 set_source_files_properties(
-	saneparser.cpp pathnames.cpp
+	pathnames.cpp
 	PROPERTIES
 	COMPILE_FLAGS 
 	"${CMAKE_CXX_FLAGS} -Wno-unused-variable"
 )
 
+
 add_library(TOOLBOX_LIB ${TOOLBOX_SRC})
+target_link_libraries(TOOLBOX_LIB MACOS_LIB sane)
