--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -8,7 +8,10 @@ env:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-11.0, macos-10.15]
 
     steps:
     - uses: actions/checkout@v2
@@ -17,7 +20,6 @@ jobs:
 
     - name: Brew
       run: |
-        brew update
         brew install ragel
         brew install lemon
 
