--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -35,3 +35,10 @@ jobs:
       working-directory: ${{runner.workspace}}/build
       shell: bash
       run: cmake --build . --config $BUILD_TYPE
+      
+    - name: Archive
+      uses: actions/upload-artifact@v2
+      with:
+        name: mpw
+        path: ${{runner.workspace}}/build/bin/mpw
+      
