--- a/.github/workflows/cmake-fat.yml
+++ b/.github/workflows/cmake-fat.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: xcode 12.2
       shell: bash
-      run: xcode-select -s /Applications/Xcode_12.2.app
+      run: sudo xcode-select -s /Applications/Xcode_12.2.app
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{runner.workspace}}/build
