--- a/.github/workflows/cmake-fat.yml
+++ b/.github/workflows/cmake-fat.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   build:
-    runs-on: macos-11.0
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -17,10 +17,6 @@ jobs:
 
     - name: Brew
       run: brew install ragel lemon
-
-    - name: xcode 12.2
-      shell: bash
-      run: sudo xcode-select -s /Applications/Xcode_12.2.app
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{runner.workspace}}/build
